# echoscript

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/echoscript/: __init__.py  audio2text.py  cli.py  gradio_app.py  utils.py
test/: test_audio2text.py  test_cli.py  test_utils.py
