
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoscript"
version = "0.0.1"
description = "A audio-to-text conversion package"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/susuky/echoscript"

[tool.setuptools]
packages = ["echoscript"]
package-dir = {"" = "src"}